mexendo rotinas, após alterar a tabela

--- a/jupyter/Jogos da Megasena.ipynb
+++ b/jupyter/Jogos da Megasena.ipynb
@@ -13,8 +13,11 @@
     "load_dotenv()\n",
     "\n",
     "locale.setlocale(locale.LC_ALL, \"pt_BR.UTF-8\")\n",
+    "locale.setlocale(locale.LC_MONETARY, \"pt_BR.UTF-8\")\n",
     "\n",
-    "engine: sa.Engine = sa.create_engine(os.getenv(\"URL_MYSQL\"))"
+    "engine: sa.Engine = sa.create_engine(os.getenv(\"URL_MYSQL\"))\n",
+    "\n",
+    "pd.set_option(\"display.max_rows\", lambda val: locale.currency(val=val, symbol=True, grouping=True))"
    ],
    "metadata": {
     "collapsed": false
@@ -27,7 +30,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "df_new: pd.DataFrame = pd.read_csv(\"./src/megasena.csv\", sep=\";\", encoding=\"utf-8-sig\")\n",
+    "df_new: pd.DataFrame = pd.read_csv(\"../src/megasena.csv\", encoding=\"utf-8-sig\")\n",
     "\n",
     "row_inserted: int = df_new.to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
     "print(f\"Foram {row_inserted} jogo(s) inserido(s) com sucesso!\")"
@@ -44,8 +47,8 @@
     "\n",
     "df_last[\"concurso\"] = df_last[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_last[\"data\"] = pd.to_datetime(df_last[\"data\"]).dt.strftime(\"%x (%a)\")\n",
-    "df_last[\"ganhou\"] = np.where(df_last[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
-    "df_last.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
+    "df_last[\"acerto_6\"] = np.where(df_last[\"acerto_6\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
+    "df_last.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Acertou?\", \"Rateio\"]\n",
     "\n",
     "df_last.tail(15)"
    ],
@@ -94,7 +97,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Aposta n.°\": [], \"Acertos\": []}\n",
+    "mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Aposta n.°\": [], \"Acertos\": [], \"Rateio\": []}\n",
     "\n",
     "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples(index=False, name=None):\n",
     "    for aposta in minhas_apostas:\n",
@@ -109,6 +112,7 @@
     "            mega[\"Bolas\"].append(\" \".join(match))\n",
     "            mega[\"Aposta n.°\"].append(minhas_apostas.index(aposta) + 1)\n",
     "            mega[\"Acertos\"].append(len(match))\n",
+    "            mega[\"Rateio\"].append(row[4])\n",
     "\n",
     "pd.DataFrame(mega)"
    ],
@@ -122,7 +126,7 @@
    "source": [
     "sua_aposta: str = \"12 14 31 45 50 60\"\n",
     "\n",
-    "mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Acertos\": []}\n",
+    "mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Acertos\": [], \"Rateio\": []}\n",
     "\n",
     "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples(index=False, name=None):\n",
     "    match: list[str] = []\n",
@@ -134,6 +138,7 @@
     "        mega[\"Data\"].append(pd.to_datetime(row[1]).strftime(\"%x (%a)\"))\n",
     "        mega[\"Bolas\"].append(row[2])\n",
     "        mega[\"Acertos\"].append(len(match))\n",
+    "        mega[\"Rateio\"].append(row[4])\n",
     "\n",
     "pd.DataFrame(mega)"
    ],
@@ -145,14 +150,23 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "stmt:str = \"SELECT * FROM megasena WHERE data IN (SELECT MAX(data) FROM megasena GROUP BY YEAR(data) HAVING YEAR(data) <> YEAR(CURRENT_DATE))\"\n",
+    "stmt: str = \"\"\"\n",
+    "    SELECT concurso, data, bolas, acerto_6, rateio_6\n",
+    "    FROM megasena\n",
+    "    WHERE data IN (\n",
+    "        SELECT MAX(data)\n",
+    "        FROM megasena\n",
+    "        GROUP BY YEAR(data)\n",
+    "        HAVING YEAR(data) <> YEAR(CURRENT_DATE)\n",
+    "    )\n",
+    "\"\"\"\n",
     "\n",
     "df_mega_da_virada: pd.DataFrame = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
     "\n",
     "df_mega_da_virada[\"concurso\"] = df_mega_da_virada[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_mega_da_virada[\"data\"] = pd.to_datetime(df_mega_da_virada[\"data\"]).dt.strftime(\"%x (%a)\")\n",
-    "df_mega_da_virada[\"ganhou\"] = np.where(df_mega_da_virada[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
-    "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
+    "df_mega_da_virada[\"acerto_6\"] = np.where(df_mega_da_virada[\"acerto_6\"].ne(0), \"Alguém acertou\", \"Ninguém acertou\")\n",
+    "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Acertou?\", \"Rateio\"]\n",
     "\n",
     "df_mega_da_virada"
    ],
