--- a/jupyter/Jogos da Megasena.ipynb
+++ b/jupyter/Jogos da Megasena.ipynb
@@ -17,7 +17,8 @@
     "\n",
     "engine: sa.Engine = sa.create_engine(os.getenv(\"URL_MYSQL\"))\n",
     "\n",
-    "pd.set_option(\"display.max_rows\", lambda val: locale.currency(val=val, symbol=True, grouping=True))"
+    "pd.set_option(\"display.float_format\", lambda val: locale.currency(val=val, symbol=True, grouping=True))\n",
+    "pd.set_option(\"display.max_rows\", None)"
    ],
    "metadata": {
     "collapsed": false
@@ -43,7 +44,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "df_last: pd.DataFrame = pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine)\n",
+    "df_last: pd.DataFrame = pd.read_sql(sql=sa.text(\"SELECT concurso, data, bolas, acerto_6, rateio_6 FROM megasena\"), con=engine)\n",
     "\n",
     "df_last[\"concurso\"] = df_last[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_last[\"data\"] = pd.to_datetime(df_last[\"data\"]).dt.strftime(\"%x (%a)\")\n",
@@ -88,7 +89,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "pd.read_sql(sql=sa.text(f\"SELECT * FROM megasena WHERE bolas IN {minhas_apostas}\"), con=engine)",
+   "source": "pd.read_sql(sql=sa.text(f\"SELECT concurso, data, bolas, acerto_6, rateio_6 FROM megasena WHERE bolas IN {minhas_apostas}\"), con=engine)",
    "id": "1c57c7504792fe13",
    "outputs": [],
    "execution_count": null
@@ -97,24 +98,27 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Aposta n.°\": [], \"Acertos\": [], \"Rateio\": []}\n",
+    "for r in range(6, 3, -1):\n",
+    "    mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Aposta n.°\": []}\n",
     "\n",
-    "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples(index=False, name=None):\n",
-    "    for aposta in minhas_apostas:\n",
-    "        bolas: list[str] = aposta.split()\n",
-    "        match: list[str] = []\n",
-    "        for x in range(6):\n",
-    "            if bolas[x] in row[2]:\n",
-    "                match.append(bolas[x])\n",
-    "        if len(match) >= 4:\n",
-    "            mega[\"Concurso\"].append(str(row[0]).zfill(4))\n",
-    "            mega[\"Data\"].append(pd.to_datetime(row[1]).strftime(\"%x (%a)\"))\n",
-    "            mega[\"Bolas\"].append(\" \".join(match))\n",
-    "            mega[\"Aposta n.°\"].append(minhas_apostas.index(aposta) + 1)\n",
-    "            mega[\"Acertos\"].append(len(match))\n",
-    "            mega[\"Rateio\"].append(row[4])\n",
+    "    stmt: str = f\"SELECT concurso, data, bolas, acerto_{r}, rateio_{r} FROM megasena\"\n",
     "\n",
-    "pd.DataFrame(mega)"
+    "    for row in pd.read_sql(sql=sa.text(stmt), con=engine).itertuples(index=False, name=None):\n",
+    "        for aposta in minhas_apostas:\n",
+    "            bolas: list[str] = aposta.split()\n",
+    "            match: list[str] = []\n",
+    "\n",
+    "            for x in range(6):\n",
+    "                if bolas[x] in row[2]:\n",
+    "                    match.append(bolas[x])\n",
+    "\n",
+    "            if len(match) >= 4:\n",
+    "                mega[\"Concurso\"].append(str(row[0]).zfill(4))\n",
+    "                mega[\"Data\"].append(pd.to_datetime(row[1]).strftime(\"%x (%a)\"))\n",
+    "                mega[\"Bolas\"].append(\" \".join(match))\n",
+    "                mega[\"Aposta n.°\"].append(minhas_apostas.index(aposta) + 1)\n",
+    "\n",
+    "    pd.DataFrame(mega)"
    ],
    "id": "bad2018beb39e238",
    "outputs": [],
@@ -126,7 +130,7 @@
    "source": [
     "sua_aposta: str = \"12 14 31 45 50 60\"\n",
     "\n",
-    "mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Acertos\": [], \"Rateio\": []}\n",
+    "mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Acertos\": []}\n",
     "\n",
     "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples(index=False, name=None):\n",
     "    match: list[str] = []\n",
@@ -138,7 +142,6 @@
     "        mega[\"Data\"].append(pd.to_datetime(row[1]).strftime(\"%x (%a)\"))\n",
     "        mega[\"Bolas\"].append(row[2])\n",
     "        mega[\"Acertos\"].append(len(match))\n",
-    "        mega[\"Rateio\"].append(row[4])\n",
     "\n",
     "pd.DataFrame(mega)"
    ],
@@ -188,7 +191,7 @@
     "        except KeyError:\n",
     "            apostas[int(y[z])] = 1\n",
     "\n",
-    "apostas_ordenadas: dict[int: int] = {k: v for k, v in sorted(apostas.items(), key=lambda r: r[0])}\n",
+    "apostas_ordenadas: dict[int: int] = {k: v for k, v in sorted(apostas.items(), key=lambda s: s[0])}\n",
     "\n",
     "acertos: pd.DataFrame = pd.DataFrame(data=apostas_ordenadas, index=[\"acertos\"], columns=apostas_ordenadas.keys())\n",
     "acertos.index.name = \"bolas\"\n",
