--- a/jupyter/Entendendo Geral.ipynb
+++ b/jupyter/Entendendo Geral.ipynb
@@ -14,17 +14,9 @@
    "cell_type": "code",
    "source": [
     "import json\n",
-    "import csv"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "trusted": false
-   },
-   "cell_type": "code",
-   "source": [
+    "import csv\n",
+    "\n",
+    "\n",
     "class Dados:\n",
     "    def __init__(self, dados):\n",
     "        self.dados = dados\n",
@@ -87,19 +79,11 @@
     "        dados_combinados_tabela = self.__transformando_dados_tabela()\n",
     "        with open(path, \"w\") as file:\n",
     "            writer = csv.writer(file)\n",
-    "            writer.writerows(dados_combinados_tabela)"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "trusted": false
-   },
-   "cell_type": "code",
-   "source": [
-    "path_json = \"./src/dados_empresaA.json\"\n",
-    "path_csv = \"./src/dados_empresaB.csv\"\n",
+    "            writer.writerows(dados_combinados_tabela)\n",
+    "\n",
+    "\n",
+    "path_json = \"../src/dados_empresaA.json\"\n",
+    "path_csv = \"../src/dados_empresaB.csv\"\n",
     "\n",
     "# extrair\n",
     "dados_empresaA = Dados.leitura_dados(path_json, \"json\")\n",
