--- a/jupyter/Cursos de UNIBB.ipynb
+++ b/jupyter/Cursos de UNIBB.ipynb
@@ -23,7 +23,9 @@
    "cell_type": "code",
    "source": [
     "try:\n",
-    "    row_inserted: int = pd.read_csv(\"../src/unibb.csv\", encoding=\"utf-8-sig\").to_sql(name=\"unibb\", con=engine, if_exists=\"append\", index=False)\n",
+    "    df_insert: pd.DataFrame = pd.read_csv(\"../src/unibb.csv\", sep=\";\")\n",
+    "    df_insert = df_insert[df_insert[\"save\"] == 1][[\"id_curso\", \"nm_curso\", \"hr_curso\"]]\n",
+    "    row_inserted: int = df_insert.to_sql(name=\"unibb\", con=engine, if_exists=\"append\", index=False)\n",
     "    print(f\"Foi(ram) {row_inserted} registro(s) inserido(s) com sucesso!\")\n",
     "except FileNotFoundError:\n",
     "    print(\"Erro ao localizar um arquivo .CSV...\")\n",
