--- a/lançamentos-contracheque.ipynb
+++ b/lançamentos-contracheque.ipynb
@@ -8,7 +8,6 @@
     "from datetime import datetime\n",
     "import locale\n",
     "import os\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -20,7 +19,7 @@
     "locale.setlocale(locale.LC_ALL, \"pt_BR.UTF-8\")\n",
     "locale.setlocale(locale.LC_MONETARY, \"pt_BR.UTF-8\")\n",
     "\n",
-    "pd.set_option(\"display.float_format\", lambda x: locale.currency(val=x, symbol=False, grouping=True))\n",
+    "pd.set_option(\"display.float_format\", lambda val: locale.currency(val=val, symbol=False, grouping=True))\n",
     "\n",
     "engine: sa.Engine = sa.engine.create_engine(os.getenv(\"URL_MYSQL\"))"
    ],
@@ -30,52 +29,20 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "sqls: list[str] = [\n",
-    "    \"\"\"\n",
-    "        CREATE TABLE IF NOT EXISTS lançamento (\n",
-    "            id_lançamento TINYINT AUTO_INCREMENT PRIMARY KEY,\n",
-    "            lançamento VARCHAR(60) NOT NULL\n",
-    "        )\n",
-    "    \"\"\",\n",
-    "    \"\"\"\n",
-    "        CREATE TABLE IF NOT EXISTS espelho (\n",
-    "            id INTEGER AUTO_INCREMENT PRIMARY KEY,\n",
-    "            id_lançamento TINYINT NOT NULL,\n",
-    "            período MEDIUMINT NOT NULL,\n",
-    "            acerto BOOLEAN NOT NULL DEFAULT FALSE,\n",
-    "            valor DOUBLE NOT NULL\n",
-    "        )\n",
-    "    \"\"\",\n",
-    "    \"\"\"\n",
-    "        SELECT id_lançamento AS Código, lançamento AS Lançamento\n",
-    "        FROM lançamento\n",
-    "    \"\"\",\n",
-    "    \"\"\"\n",
-    "        SELECT id_lançamento AS Código, período AS Período, acerto AS Acerto, valor AS Valor\n",
-    "        FROM espelho\n",
-    "    \"\"\",\n",
-    "    \"\"\"\n",
-    "        SELECT y.lançamento AS Lançamento, x.período AS Período, IF(x.acerto = 1, 'A', 'M') AS Acerto, x.valor AS Valor\n",
-    "        FROM espelho x LEFT JOIN lançamento y ON x.id_lançamento = y.id_lançamento\n",
-    "        WHERE x.período = YEAR(CURRENT_DATE()) * 100 + MONTH(CURRENT_DATE())\n",
-    "    \"\"\",\n",
-    "    \"\"\"\n",
-    "        SELECT SUM(valor) AS Total\n",
-    "        FROM espelho\n",
-    "        WHERE período = YEAR(CURRENT_DATE()) * 100 + MONTH(CURRENT_DATE())\n",
-    "    \"\"\",\n",
-    "    \"\"\"\n",
-    "        SELECT período AS Período, SUM(valor) AS Total\n",
-    "        FROM espelho\n",
-    "        WHERE SUBSTR(período, 1, 4) = YEAR(CURRENT_DATE())\n",
-    "        GROUP BY período\n",
-    "    \"\"\"\n",
-    "]"
+    "stmt: str = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS lançamento (\n",
+    "        id_lançamento TINYINT AUTO_INCREMENT PRIMARY KEY,\n",
+    "        lançamento VARCHAR(60) NOT NULL\n",
+    "    )\n",
+    "\"\"\"\n",
+    "with engine.begin() as cnx:\n",
+    "    cnx.execute(sa.text(stmt))\n",
+    "print(\"Tabela 'lançamento' criada com sucesso!\")"
    ],
-   "id": "d53714ca6b5af2c7"
+   "id": "7d7e3eba2bf93252",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
@@ -85,52 +52,81 @@
     }
    },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "pd.read_sql(sql=sa.text(\"SELECT id_lançamento AS Código, lançamento AS Lançamento FROM lançamento\"), con=engine)",
-   "id": "f0eea38d422d58ae"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "with engine.begin() as cnx:\n",
-    "    cnx.execute(sa.text(sqls[0]))\n",
-    "print(\"Tabela criada com sucesso!\")"
+    "# exibir a tabela lançamento\n",
+    "pd.read_sql(sql=sa.text(\"SELECT id_lançamento AS Código, lançamento AS Lançamento FROM lançamento\"), con=engine)"
    ],
-   "id": "7d7e3eba2bf93252"
+   "id": "f0eea38d422d58ae",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
+    "stmt: str = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS espelho (\n",
+    "        id INTEGER AUTO_INCREMENT PRIMARY KEY,\n",
+    "        id_lançamento TINYINT NOT NULL,\n",
+    "        período MEDIUMINT NOT NULL,\n",
+    "        acerto BOOLEAN NOT NULL DEFAULT FALSE,\n",
+    "        valor DOUBLE NOT NULL\n",
+    "    )\n",
+    "\"\"\"\n",
+    "with engine.begin() as cnx:\n",
+    "    cnx.execute(sa.text(stmt))\n",
+    "print(\"Tabela 'espelho' criada com sucesso!\")"
+   ],
+   "id": "e90a11276eace400",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# inserir novos registros para a tabela espelho\n",
     "df_new: pd.DataFrame = pd.read_csv(\"./src/espelho.csv\", sep=\",\", encoding=\"utf-8-sig\")\n",
     "row_inserted: int = df_new.to_sql(name=\"espelho\", con=engine, if_exists=\"append\", index=False)\n",
     "print(f\"Foram {row_inserted} lançamentos inseridos com sucesso.\")"
    ],
-   "id": "d6b5f9e004098d98"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
+   "id": "d6b5f9e004098d98",
    "outputs": [],
-   "execution_count": null,
-   "source": "pd.read_sql(sql=sa.text(sqls[6]), con=engine)",
-   "id": "a85016714542a2a9"
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "df_new: pd.DataFrame = pd.read_csv(\"../src/espelho.csv\", encoding=\"utf-8-sig\")\n",
-    "rows_inserted: int = df_new.to_sql(name=\"espelho\", con=engine, if_exists=\"append\", index=False)\n",
-    "print(f\"Foi(ram) {rows_inserted} lançamento(s) inserido(s) com sucesso.\")"
+    "# exibir a tabela espelho do mês atual\n",
+    "stmt: str = \"\"\"\n",
+    "    SELECT y.lançamento AS Lançamento, x.período AS Período, IF(x.acerto = 1, 'Acerto', 'Mês') AS Acerto, x.valor AS Valor\n",
+    "    FROM espelho x LEFT JOIN lançamento y ON x.id_lançamento = y.id_lançamento\n",
+    "    WHERE x.período = YEAR(CURRENT_DATE()) * 100 + MONTH(CURRENT_DATE())\n",
+    "    ORDER BY Acerto, Valor DESC\n",
+    "\"\"\"\n",
+    "\n",
+    "pd.read_sql(sql=sa.text(stmt), con=engine)"
    ],
-   "id": "95cf26a6d2f155e5",
+   "id": "a85016714542a2a9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# exibir os períodos com seus valores totais do ano anual\n",
+    "stmt: str = \"\"\"\n",
+    "        SELECT período AS Período, SUM(valor) AS Total\n",
+    "        FROM espelho\n",
+    "        WHERE SUBSTR(período, 1, 4) = YEAR(CURRENT_DATE())\n",
+    "        GROUP BY período\n",
+    "    \"\"\"\n",
+    "\n",
+    "pd.read_sql(sql=sa.text(stmt), con=engine)"
+   ],
+   "id": "39a24acb4bc11a57",
    "outputs": [],
    "execution_count": null
   },
@@ -144,6 +140,7 @@
     }
    },
    "source": [
+    "# exibir a tabela espelho para o mês atual\n",
     "period: int = datetime.now().year*100 + datetime.now().month\n",
     "\n",
     "stmt: str = f\"\"\"\n",
@@ -173,6 +170,7 @@
    "id": "726e83d28aec70b6",
    "metadata": {},
    "source": [
+    "# exibir o gráfico do total de mês a mês para o ano atual\n",
     "year: int = datetime.now().year\n",
     "\n",
     "stmt: str = f\"\"\"\n",
@@ -200,7 +198,7 @@
     "df_ano.loc[\"sumário\"] = df_ano.sum(numeric_only=True)\n",
     "df_ano.fillna(value=\"\", inplace=True)\n",
     "df_ano.iloc[-1, 0] = \"Sumário\"\n",
-    "df_ano.set_index([\"lançamento\"], inplace=True)\n",
+    "df_ano.set_index([\"lançamento\", \"acerto\"], inplace=True)\n",
     "df_ano.rename(columns={\n",
     "    int(f\"{year}01\"): \"jan\", int(f\"{year}02\"): \"fev\", int(f\"{year}03\"): \"mar\", int(f\"{year}04\"): \"abr\",\n",
     "    int(f\"{year}05\"): \"mai\", int(f\"{year}06\"): \"jun\", int(f\"{year}07\"): \"jul\", int(f\"{year}08\"): \"ago\",\n",
@@ -215,6 +213,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# resumos totais anuais\n",
     "stmt: str = \"\"\"\n",
     "    SELECT\n",
     "        SUBSTR(período, 1, 4) AS ano,\n",
@@ -246,9 +245,31 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
+    "# exibir o gráfico do total de mês a mês para o ano atual\n",
+    "year: int = datetime.now().year\n",
+    "\n",
+    "plt.figure(figsize=(16, 6))\n",
+    "plt.style.use(\"ggplot\")\n",
+    "\n",
+    "ax: plt.Axes = sns.barplot(data=df_anuais.loc[[year], df_anuais.columns[:-2]])\n",
+    "ax.set_title(f\"Espelho {year}\", loc=\"center\", fontweight=\"bold\", fontsize=12)\n",
+    "ax.set(xlabel=\"\", ylabel=\"\", yticks=[])\n",
+    "\n",
+    "for mes in range(12):\n",
+    "    ax.bar_label(ax.containers[mes], fmt=lambda i: locale.currency(val=i, symbol=False, grouping=True), fontsize=10)\n",
+    "\n",
+    "plt.show()"
+   ],
+   "id": "2ac05ede5ffec6d3",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# exibir o gráfico do total de mês a mês para o ano desejado\n",
     "year: int = int(input(\"Em que ano quer visualizar o gráfico (a partir de 2005)? \"))\n",
     "\n",
     "if 2005 <= year <= datetime.now().year:\n",
@@ -275,7 +296,7 @@
     "    df_anual[\"total\"] = df_anual[df_anual.columns[:-1]].sum(axis=1)\n",
     "    df_anual.columns = [\"jan\", \"fev\", \"mar\", \"abr\", \"mai\", \"jun\", \"jul\", \"ago\", \"set\", \"out\", \"nov\", \"dez\", \"média\", \"total\"]\n",
     "\n",
-    "    plt.figure(figsize=(16, 4))\n",
+    "    plt.figure(figsize=(16, 6))\n",
     "    plt.style.use(\"ggplot\")\n",
     "\n",
     "    ax: plt.Axes = sns.barplot(data=df_anual.loc[[year], df_anual.columns[:-2]])\n",
@@ -289,27 +310,7 @@
     "else:\n",
     "    print(f\"Não consta o contracheque do ano {year}.\")"
    ],
-   "id": "a086be01f2306024"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "year: int = datetime.now().year\n",
-    "\n",
-    "plt.figure(figsize=(16, 6))\n",
-    "plt.style.use(\"ggplot\")\n",
-    "\n",
-    "ax: plt.Axes = sns.barplot(data=df_anuais.loc[[year], df_anuais.columns[:-2]])\n",
-    "ax.set_title(f\"Espelho {year}\", loc=\"center\", fontweight=\"bold\", fontsize=12)\n",
-    "ax.set(xlabel=\"\", ylabel=\"\", yticks=[])\n",
-    "\n",
-    "for mes in range(12):\n",
-    "    ax.bar_label(ax.containers[mes], fmt=lambda i: locale.currency(val=i, symbol=False, grouping=True), fontsize=10)\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "2ac05ede5ffec6d3",
+   "id": "a086be01f2306024",
    "outputs": [],
    "execution_count": null
   }
