--- a/loteria-megasena.ipynb
+++ b/loteria-megasena.ipynb
@@ -18,7 +18,7 @@
     "locale.setlocale(locale.LC_ALL, \"pt_BR.UTF-8\")\n",
     "locale.setlocale(locale.LC_MONETARY, \"pt_BR.UTF-8\")\n",
     "\n",
-    "pd.set_option(\"display.float_format\", lambda x: f\"R$ {locale.currency(val=x, symbol=False, grouping=True)}\")\n",
+    "pd.set_option(\"display.float_format\", lambda val: f\"R$ {locale.currency(val=val, symbol=False, grouping=True)}\")\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
     "load_dotenv()\n",
@@ -93,6 +93,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# inserir novos sorteios da tabela\n",
     "df: pd.DataFrame = pd.read_excel(\"~/Downloads/Mega-Sena.xlsx\")\n",
     "df[\"Data do Sorteio\"] = pd.to_datetime(df[\"Data do Sorteio\"], format=\"%d/%m/%Y\")\n",
     "for col in df.columns[2:8]:\n",
@@ -118,6 +119,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# função de manipulação da tabela\n",
     "def columns(table: pd.DataFrame) -> pd.DataFrame:\n",
     "    table[\"id_sorteio\"] = table[\"id_sorteio\"].astype(str).str.zfill(4)\n",
     "    table[\"dt_sorteio\"] = pd.to_datetime(table[\"dt_sorteio\"]).dt.strftime(\"%x (%a)\")\n",
@@ -135,7 +137,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "columns(pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine)).tail(25)",
+   "source": [
+    "# exibir os 25 últimos sorteios\n",
+    "columns(pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine)).tail(25)"
+   ],
    "id": "f8e14327490fa749",
    "outputs": [],
    "execution_count": null
