--- a/cursos-unibb.ipynb
+++ b/cursos-unibb.ipynb
@@ -35,7 +35,7 @@
     "with engine.begin() as cnx:\n",
     "    cnx.execute(sa.text(stmt))\n",
     "\n",
-    "print(\"Tabela criada com sucesso.\")"
+    "\"Tabela criada com sucesso.\""
    ],
    "id": "3b12ed16b712c7a2",
    "outputs": [],
@@ -51,16 +51,16 @@
     "    df_new = df_new[[\"id_curso\", \"nm_curso\", \"hr_curso\"]]\n",
     "    rows_inserted: int = df_new.to_sql(name=\"unibb\", con=engine, if_exists=\"append\", index=False)\n",
     "\n",
-    "    print(f\"Foram {rows_inserted} cursos inseridos com sucesso.\")\n",
+    "    f\"Foram {rows_inserted} cursos inseridos com sucesso.\"\n",
     "except FileNotFoundError:\n",
-    "    print(\"Erro ao localizar o arquivo .CSV...\")\n",
+    "    \"Erro ao localizar o arquivo .CSV...\"\n",
     "except UnicodeEncodeError:\n",
-    "    print(\"Erro ao decodificar o arquivo .CSV...\")\n",
+    "    \"Erro ao decodificar o arquivo .CSV...\"\n",
     "else:\n",
     "    df_deleted: pd.DataFrame = pd.read_csv(\"./src/unibb.csv\", sep=\",\", encoding=\"utf-8-sig\")\n",
     "    df_deleted[df_deleted[\"save\"].ne(1)].to_csv(\"./src/unibb.csv\", index=False, sep=\",\", encoding=\"utf-8-sig\")\n",
     "\n",
-    "    print(\"Cursos atualizados com sucesso.\")"
+    "    \"Cursos atualizados com sucesso.\""
    ],
    "id": "aaa99da3743e6fb9",
    "outputs": [],
