--- a/lançamentos-contracheque.ipynb
+++ b/lançamentos-contracheque.ipynb
@@ -198,11 +198,12 @@
     "df_ano.loc[\"sumário\"] = df_ano.sum(numeric_only=True)\n",
     "df_ano.fillna(value=\"\", inplace=True)\n",
     "df_ano.iloc[-1, 0] = \"Sumário\"\n",
+    "df_ano.iloc[-1, 1] = \"----------\"\n",
     "df_ano.set_index([\"lançamento\", \"acerto\"], inplace=True)\n",
     "df_ano.rename(columns={\n",
-    "    int(f\"{year}01\"): \"jan\", int(f\"{year}02\"): \"fev\", int(f\"{year}03\"): \"mar\", int(f\"{year}04\"): \"abr\",\n",
-    "    int(f\"{year}05\"): \"mai\", int(f\"{year}06\"): \"jun\", int(f\"{year}07\"): \"jul\", int(f\"{year}08\"): \"ago\",\n",
-    "    int(f\"{year}09\"): \"set\", int(f\"{year}10\"): \"out\", int(f\"{year}11\"): \"nov\", int(f\"{year}12\"): \"dez\",\n",
+    "    year*100 + 1: \"jan\", year*100 + 2: \"fev\", year*100 + 3: \"mar\", year*100 + 4: \"abr\",\n",
+    "    year*100 + 5: \"mai\", year*100 + 6: \"jun\", year*100 + 7: \"jul\", year*100 + 8: \"ago\",\n",
+    "    year*100 + 9: \"set\", year*100 + 10: \"out\", year*100 + 11: \"nov\", year*100 + 12: \"dez\",\n",
     "}, inplace=True)\n",
     "df_ano"
    ],
@@ -269,7 +270,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# exibir o gráfico do total de mês a mês para o ano desejado\n",
+    "# exibir o gráfico do total de mês a mês para o ano escolhido\n",
     "year: int = int(input(\"Em que ano quer visualizar o gráfico (a partir de 2005)? \"))\n",
     "\n",
     "if 2005 <= year <= datetime.now().year:\n",
