--- a/loteria-megasena.ipynb
+++ b/loteria-megasena.ipynb
@@ -81,9 +81,9 @@
     "        cnx.execute(sa.text(\"DROP TABLE IF EXISTS megasena\"))\n",
     "        cnx.execute(sa.text(stmt))\n",
     "    except sa.exc.OperationalError:\n",
-    "        print(\"Deu erro ao criar a tabela...\")\n",
+    "        \"Deu erro ao criar a tabela...\"\n",
     "    else:\n",
-    "        print(\"Tabela deletada e recriada com sucesso.\")"
+    "        \"Tabela deletada e recriada com sucesso.\""
    ],
    "id": "6d0047b2ef414e4c",
    "outputs": [],
@@ -109,7 +109,7 @@
     "df.loc[2701] = [\"2024-03-16\", \"06 15 18 31 32 47\", 0, 0.0, 72, 59349.01, 5712, 1068.7]\n",
     "df = df.reset_index().sort_values(by=[\"id_sorteio\", \"dt_sorteio\"], ignore_index=True)\n",
     "row_inserted: int = df.to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
-    "print(f\"Foram {row_inserted} jogos inseridos com sucesso.\")"
+    "f\"Foram {row_inserted} jogos inseridos com sucesso.\""
    ],
    "id": "6d286508b55ff624",
    "outputs": [],
@@ -154,7 +154,7 @@
     "    SELECT * FROM megasena WHERE dt_sorteio IN\n",
     "        (SELECT MAX(dt_sorteio) FROM megasena GROUP BY YEAR(dt_sorteio) HAVING YEAR(dt_sorteio) <> YEAR(CURRENT_DATE))\n",
     "\"\"\"\n",
-    "print(columns(pd.read_sql(sql=sa.text(stmt), con=engine)))"
+    "columns(pd.read_sql(sql=sa.text(stmt), con=engine))"
    ],
    "id": "be71ae862d82e47d",
    "outputs": [],
@@ -186,7 +186,7 @@
     "                mega[\"Aposta n.°\"].append(minhas_apostas.index(aposta) + 1)\n",
     "\n",
     "    print(f\"\\nLista de {r} acertos:\")\n",
-    "    print(pd.DataFrame(mega)) if len(pd.DataFrame(mega)) != 0 else print(\"Suas apostas não tiveram acertos...\")"
+    "    pd.DataFrame(mega) if len(pd.DataFrame(mega)) != 0 else \"Suas apostas não tiveram acertos...\""
    ],
    "id": "d43704ad689feb48",
    "outputs": [],
@@ -214,7 +214,7 @@
     "        mega[\"Bolas\"].append(row[2])\n",
     "        mega[\"Acertos\"].append(len(match))\n",
     "\n",
-    "print(pd.DataFrame(mega)) if len(pd.DataFrame(mega)) != 0 else print(\"Sua aposta não teve acertos...\")"
+    "pd.DataFrame(mega) if len(pd.DataFrame(mega)) != 0 else \"Sua aposta não teve acertos...\""
    ],
    "id": "e956f136be256d19",
    "outputs": [],
@@ -239,7 +239,7 @@
     "\n",
     "acertos: pd.DataFrame = pd.DataFrame(data=apostas_ordenadas, index=[\"acertos\"])\n",
     "acertos.index.name = \"bolas\"\n",
-    "print(acertos)"
+    "acertos"
    ],
    "id": "387cc2781b1367fb",
    "outputs": [],
