--- a/entendendo-geral.ipynb
+++ b/entendendo-geral.ipynb
@@ -215,9 +215,96 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "### ASYNCIO"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
-    "### Excel no Python"
-   ]
+    "# sem asyncio\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "def brew_coffee():\n",
+    "    print(\"Start brew_coffee()\")\n",
+    "    time.sleep(3)\n",
+    "    print(\"End brew_coffee()\")\n",
+    "    return \"Coffee ready\"\n",
+    "\n",
+    "\n",
+    "def toast_bagel():\n",
+    "    print(\"Start toast_bagel()\")\n",
+    "    time.sleep(3)\n",
+    "    print(\"End toast_bagel()\")\n",
+    "    return \"Bagel toasted\"\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    start_time = time.time()\n",
+    "    \n",
+    "    result_coffee = brew_coffee()\n",
+    "    result_bagel = toast_bagel()\n",
+    "    \n",
+    "    end_time = time.time()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    \n",
+    "    print(f\"\\nResult of brewCoffee: {result_coffee}\")\n",
+    "    print(f\"Result of toastBagel: {result_bagel}\")\n",
+    "    print(f\"Total execution time: {elapsed_time:.2f} seconds\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# com asyncio\n",
+    "import asyncio\n",
+    "\n",
+    "\n",
+    "async def brew_coffee():\n",
+    "    print(\"Start brew_coffee()\")\n",
+    "    await asyncio.sleep(3)\n",
+    "    print(\"End brewCoffee()\")\n",
+    "    return \"Coffee ready!\"\n",
+    "\n",
+    "\n",
+    "async def toast_bagel():\n",
+    "    print(\"Start toastBagel()\")\n",
+    "    await asyncio.sleep(3)\n",
+    "    print(\"End toastBagel()\")\n",
+    "    return \"Bagel toasted!\"\n",
+    "\n",
+    "\n",
+    "async def main():\n",
+    "    start_time = time.time()\n",
+    "    \n",
+    "    batch = asyncio.gather(brew_coffee(), toast_bagel())  # coroutine object\n",
+    "    result_coffee, result_bagel = await batch\n",
+    "    \n",
+    "    end_time = time.time()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    \n",
+    "    print(f\"\\nResult of brew_coffee: {result_coffee}\")\n",
+    "    print(f\"Result of toast_bagel: {result_bagel}\")\n",
+    "    print(f\"Total execution time: {elapsed_time:.2f} seconds\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(main())"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Excel no Python"
   },
   {
    "metadata": {
@@ -321,9 +408,26 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "### Calendário"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
-    "### Número Primo"
-   ]
+    "from datetime import datetime\n",
+    "import locale as lc\n",
+    "import calendar as cal\n",
+    "\n",
+    "lc.setlocale(category=lc.LC_ALL, locale=\"pt_BR.UTF-8\")\n",
+    "print(cal.calendar(theyear=datetime.now().year))"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Número Primo"
   },
   {
    "metadata": {
