--- a/estudo-pandas.ipynb
+++ b/estudo-pandas.ipynb
@@ -7,6 +7,7 @@
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
+    "from annotated_types.test_cases import cases\n",
     "\n",
     "df = pd.DataFrame({\"nome\": [\"Rogério\"], \"salário\": [\"$8.500,00\"]})\n",
     "display(df)\n",
@@ -965,7 +966,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = {\n",
+    "df: dict[str: list[int | str | float]] = {\n",
     "    \"id\": [1, 2, 3],\n",
     "    \"nome\": [\"Rogério\", \"Carmem\", \"Giovana\"],\n",
     "    \"curso\": [\"Delphi;Python;SQL;SAS\", \"Microsoft Office\", \"Word;Excel\"],\n",
@@ -985,46 +986,24 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## ASYNCIO"
+   "source": "### Teste sobre 'str'"
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# sem asyncio\n",
-    "import time\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
+    "data = {\n",
+    "    \"id\": [1, 2],\n",
+    "    \"nome\": [\"Rogério\", \"Carmem\"],\n",
+    "    \"data\": [\"1972-01-30\", \"1977-10-19\"],\n",
+    "    \"kyc\": [\"testar     áudio578afaMÉDIO   data:30/01/1972\", \"dfd   ALTO5678datação    data:19/10/1977\"],\n",
+    "    \"trim\": [\" df~fm~trim~ ~trim xícara chá g12h   \", \"  dgf;trim~trim~g  ~gk gf s~trim~trim ~t34m    \"]\n",
+    "}\n",
     "\n",
-    "def brew_coffee():\n",
-    "    print(\"Start brew_coffee()\")\n",
-    "    time.sleep(3)\n",
-    "    print(\"End brew_coffee()\")\n",
-    "    return \"Coffee ready\"\n",
-    "\n",
-    "\n",
-    "def toast_bagel():\n",
-    "    print(\"Start toast_bagel()\")\n",
-    "    time.sleep(3)\n",
-    "    print(\"End toast_bagel()\")\n",
-    "    return \"Bagel toasted\"\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    start_time = time.time()\n",
-    "    \n",
-    "    result_coffee = brew_coffee()\n",
-    "    result_bagel = toast_bagel()\n",
-    "    \n",
-    "    end_time = time.time()\n",
-    "    elapsed_time = end_time - start_time\n",
-    "    \n",
-    "    print(f\"\\nResult of brewCoffee: {result_coffee}\")\n",
-    "    print(f\"Result of toastBagel: {result_bagel}\")\n",
-    "    print(f\"Total execution time: {elapsed_time:.2f} seconds\")\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "data = pd.DataFrame(data)"
    ],
    "outputs": [],
    "execution_count": null
@@ -1033,40 +1012,196 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# com asyncio\n",
-    "import asyncio\n",
+    "data[\"data\"] = pd.to_datetime(data[\"data\"])\n",
+    "data[\"idade\"] = data[\"data\"].apply(lambda x: pd.to_datetime(\"today\").year - x.year)\n",
+    "data[\"idade\"]"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[data[\"idade\"].le(52)]",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[data[\"idade\"].lt(52)]",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[data[\"idade\"].le(50)]",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pd.to_datetime(data[\"data\"].astype(str) + \" 11:59:59\")",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pd.to_datetime(pd.to_datetime(data[\"data\"].astype(str) + \" 11:59:59\").astype(str).str[:10] + \" 23:59:59\")",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"kyc\"].str[16:20].isin([\"578a\", \"578y\"])",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"kyc\"].str.find(\"MÉDIO\")",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[data[\"kyc\"].str.find(\"MÉDIO\").ne(-1)]",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"kyc\"].str.len()",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"kyc\"].str.count(r\"\\d\")",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"kyc\"].str.count(r\"\\D\")",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"kyc\"].str.count(r\"\\w\")",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"kyc\"].str.count(r\"\\W\")",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "np.where(data[\"kyc\"].str.find(\"data:1\").eq(-1), False, True)",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"idade\"].astype(str).str.contains(r\"\\d\")",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "data[\"data capturada 1\"] = data[\"kyc\"].str.extract(r\"(\\d{2}\\/\\d{2}\\/\\d{4})\")  # str.extract sempre precisa de parênteses\n",
+    "data[\"data capturada 1\"] = pd.to_datetime(data[\"data capturada 1\"], format=\"%d/%m/%Y\")\n",
+    "data[\"data capturada 1\"]"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"kyc\"].str.contains(r\"\\d{2}\\/\\d{2}\\/\\d{4}\", case=False)  # str.extract sempre precisa de parênteses",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"kyc\"].str.extract(r\"(\\d+)\").astype(float) / 100",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"trim\"].replace(r\"\\w\", \"\", regex=True)",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"trim\"].replace(r\"\\W\", \"\", regex=True)",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[\"trim\"].str.extract(r\"(\\d+)\")",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "\"\"\"\n",
+    "ore[\"REFERENCIA\"] = ore[\"X_FNLD_PGTO\"].str.extract(r\"0(.{,11})\")\n",
+    "ore[\"REFERENCIA\"] = ore[\"REFERENCIA\"].str.extract(r\"0(\\d+)\")\n",
     "\n",
+    "ore[\"CD_REF_DIGITOS\"] = ore.apply(lambda x: sum(c.isdigit() for c in x[\"CD_REF\"], axis=1)\n",
+    "ou\n",
+    "ore[\"CD_REF_DIGITOS\"] = ore[\"CD_REF\"].str.count(r\"\\d\")\n",
     "\n",
-    "async def brew_coffee():\n",
-    "    print(\"Start brew_coffee()\")\n",
-    "    await asyncio.sleep(3)\n",
-    "    print(\"End brewCoffee()\")\n",
-    "    return \"Coffee ready!\"\n",
+    "ore[\"VALA\"] = ore.apply(lambda x: 6 if not x[\"CD_REF\"].isdigit() or x[\"CD_REF_DIGITOS\"] > 11 else 9, axis=1)\n",
+    "ou\n",
+    "ore[\"VALA\"] = np.where(~ore[\"CD_REF\"].isdigit() | ore[\"CD_REF_DIGITOS\"].gt(11), 6, 9)\n",
     "\n",
+    "ore[\"REFERENCIA\"] = ore.apply(lambda x: str(ore[\"REFERENCIA\"].zfill(11) if x[\"REF_DIGITOS\"] >= 10 else np.nan, axis=1)\n",
+    "ou\n",
+    "ore[\"REFERENCIA\"] = np.where(ore[\"REF_DIGITOS\"].ge(10), ore[\"REFERENCIA\"].astype(str).str.zfill(11), np.nan)\n",
     "\n",
-    "async def toast_bagel():\n",
-    "    print(\"Start toastBagel()\")\n",
-    "    await asyncio.sleep(3)\n",
-    "    print(\"End toastBagel()\")\n",
-    "    return \"Bagel toasted!\"\n",
+    "lista_mci = tuple(ore[\"COD_MCI\"].drop_duplicates().astype(int))\n",
     "\n",
+    "ore[\"CD_CCL_EXTO_BANQ\"] = ore[\"CD_CCL_EXTO_BANQ\"].astype(str).str.strip().str.zfill(11)\n",
     "\n",
-    "async def main():\n",
-    "    start_time = time.time()\n",
-    "    \n",
-    "    batch = asyncio.gather(brew_coffee(), toast_bagel())  # coroutine object\n",
-    "    result_coffee, result_bagel = await batch\n",
-    "    \n",
-    "    end_time = time.time()\n",
-    "    elapsed_time = end_time - start_time\n",
-    "    \n",
-    "    print(f\"\\nResult of brew_coffee: {result_coffee}\")\n",
-    "    print(f\"Result of toast_bagel: {result_bagel}\")\n",
-    "    print(f\"Total execution time: {elapsed_time:.2f} seconds\")\n",
+    "ore[\"SMT_REF\"] = np.where(ore[\"DATA_REF\"].dt.quarter.gt(2), 2, 1).astype(str)\n",
     "\n",
+    "ore[\"DT_ENTD\"] = pd.to_datetime(ore.fillna({\"DT_ENTD\": \"2099-12-31\"}))\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    asyncio.run(main())"
+    "ore[\"tempo_atend\"] = round(((ore[\"tempo_atend\"] / np.timedelta64(1, 'h')) * 100), 0)\n",
+    "\n",
+    "ore[\"MES\"] = pd.to_datetime(ore[\"ts_abtr_ptl\"]).dt.to_period('M').dt.to_timestamp()\n",
+    "\"\"\""
    ],
    "outputs": [],
    "execution_count": null
