--- a/lançamentos-contracheque.ipynb
+++ b/lançamentos-contracheque.ipynb
@@ -98,24 +98,6 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# exibir a tabela espelho do mês atual\n",
-    "stmt: str = \"\"\"\n",
-    "    SELECT y.lançamento AS Lançamento, x.período AS Período, IF(x.acerto = 1, 'Acerto', 'Mês') AS Acerto, x.valor AS Valor\n",
-    "    FROM espelho x LEFT JOIN lançamento y ON x.id_lançamento = y.id_lançamento\n",
-    "    WHERE x.período = YEAR(CURRENT_DATE()) * 100 + MONTH(CURRENT_DATE())\n",
-    "    ORDER BY Acerto, Valor DESC\n",
-    "\"\"\"\n",
-    "\n",
-    "pd.read_sql(sql=sa.text(stmt), con=engine)"
-   ],
-   "id": "a85016714542a2a9",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
     "# exibir os períodos com seus valores totais do ano anual\n",
     "stmt: str = \"\"\"\n",
     "        SELECT período AS Período, SUM(valor) AS Total\n",
@@ -205,7 +187,7 @@
     "    year*100 + 5: \"mai\", year*100 + 6: \"jun\", year*100 + 7: \"jul\", year*100 + 8: \"ago\",\n",
     "    year*100 + 9: \"set\", year*100 + 10: \"out\", year*100 + 11: \"nov\", year*100 + 12: \"dez\",\n",
     "}, inplace=True)\n",
-    "df_ano"
+    "df_ano.reset_index()"
    ],
    "outputs": [],
    "execution_count": null
